--- a/css/comon0.css
+++ b/css/comon0.css
@@ -312,7 +312,7 @@ body {
 	content: "";
 }
 
-.barbox:before {
+/* .barbox:before {
 	border-left: 2px solid #02a6b5;
 	left: 0;
 	border-top: 2px solid #02a6b5;
@@ -323,7 +323,7 @@ body {
 	right: 0;
 	bottom: 0;
 	border-bottom: 2px solid #02a6b5;
-}
+} */
 
 .barbox li:before {
 	position: absolute;
